Adding token, redis and modify frame.py /search API.
