# routes/HomePage.py
@@ -1,7 +1,9 @@
 from flask import Blueprint, request, jsonify
 from dbconfig.dbconnect import db
 from models.models import Product  
+from dbconfig.redisconfig import cache
 from sqlalchemy import or_
+import json
 
 home_bp = Blueprint("home", __name__, url_prefix="/homepage")
 
@@ -9,6 +11,12 @@ home_bp = Blueprint("home", __name__, url_prefix="/homepage")
 def get_products():
     category = request.args.get("category", None)  # 查詢參數 category
     sort = request.args.get("sort", "clickTimes")  # 默認按 clickTimes 排序
+
+    cache_key = f"products_{category}_{sort}"
+    cached_data = cache.get(cache_key)
+
+    if cached_data:
+        return jsonify(json.loads(cached_data)), 200
 
     # 基本參數驗證：非字串型態
     if (category and not isinstance(category, str)):
@@ -41,5 +49,7 @@ def get_products():
         "clickTimes": p.clickTimes,
         "review": p.review
     } for p in products]
+
+    cache.set(cache_key, json.dumps(results), ex=43200)  # 設定快取，12小時後過期
 
     return jsonify({"results": results}), 200
